{{$NEXT}}

    - Add some regression tests for previous fixes

0.000034  2016-06-22 11:30:00-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version

0.000033  2016-06-22 08:41:22-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix ClassicCompare to load deps (#23)

0.000032  2016-06-17 06:58:17-07:00 America/Los_Angeles

    - Add 'bag' comparison (dakkar)
    - Add 'call_list()' for DSL (dakkar)
    - Add 'call_hash()' for DSL (dakkar)

0.000031  2016-06-15 21:32:05-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix TODO to use pre-filters

0.000030  2016-05-09 07:55:17-07:00 America/Los_Angeles

    - Doc Changes

0.000029  2016-04-30 15:17:01-07:00 America/Los_Angeles

    - Doc updates from jkeroes
    - Doc updates from stevieb9
    - SRand now works without harness
    - Fix emails

0.000028  2016-04-15 14:32:30-07:00 America/Los_Angeles

    - Add Tools/Event gen_event()
    - Add Tools/Event to Extended bundle

0.000027  2016-04-13 20:22:17-07:00 America/Los_Angeles

    - Make some tests ignore custom formatters

0.000026  2016-04-05 11:11:35-07:00 America/Los_Angeles

    - Add OrderedSubset compare tools
    - Use OrderedSubset compare tool in subtest tests.
    - Bump minimumTest2 version

0.000025  2016-04-03 15:39:59-07:00 America/Los_Angeles

    - Allow column aliasing in Deltas (jkeroes)
    - Bump required Test2 version

0.000024  2016-03-20 13:40:06-07:00 America/Los_Angeles

    - Add back missing README and README.md files
    - Documentation fixes
    - No logic/code changes

0.000023  2016-03-17 23:02:50-07:00 America/Los_Angeles

    - Fix Changes file
    - Fix bug where SRand plugin comment could appear in subtest

0.000022  2016-03-07 12:18:25-08:00 America/Los_Angeles

    - Ability to disable subtest skip_all flow control

0.000021  2016-03-06 20:24:46-08:00 America/Los_Angeles

    - Bump minimum Test2 version
    - Add version to all modules
    - Minor doc fixes
    - No logic changes
