@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Add some regression tests for previous fixes
+    - Allow 'tests' and 'skip_all' prefixes support to plan() #25
 
 0.000034  2016-06-22 11:30:00-07:00 America/Los_Angeles (TRIAL RELEASE)
 
